tests/spec/non_conformant/errors/import/file/control_else.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/file/control-else.hrx"

// Ignoring "test", error tests are not supported yet.
